# clc

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: config.cmake.in  pkg-config.pc.in
examples/: CMakeLists.txt  counter.cpp  tags.cpp  variables.cpp
include/: clc.h  clc.hpp
tests/: CMakeLists.txt
tests/sources/: assign.cpp  counter.cpp  decrementable_range_counter.cpp  incrementable_range_counter.cpp  main.cpp  reverse_counter.cpp
